Almost finished light mode

--- a/Frontend/club-acceptance/club-acceptance.html
+++ b/Frontend/club-acceptance/club-acceptance.html
@@ -39,7 +39,7 @@
 
     <main>
         <h1 class="heading">Vereinsanmeldung</h1>
-        <p class="subtext">Verein <span class="club-name">Die Zerstörer</span> (E-Mail: <span class="club-mail">zerstörer@hotmail.de</span>) haben sich angemeldet.</p>
+        <p class="subtext">Verein <span class="highlighted-span">Die Zerstörer</span> (E-Mail: <span class="highlighted-span">zerstörer@hotmail.de</span>) haben sich angemeldet.</p>
         <div class="decision clearfix">
             <p>Zulassen?</p>
             <a class="primary-button accept accent-1" href="#">
