--- a/Frontend/dashboard/dashboard.html
+++ b/Frontend/dashboard/dashboard.html
@@ -42,7 +42,7 @@
     <main class="dashboard">
 
         <div class="fade-wrapper clearfix">
-            <div class="col">
+            <div class="container-medium">
                 <a class="tournaments" href="#">
                     <h3 class="heading">Wettkämpfe</h3>
                     <span class="count">25</span>
@@ -50,7 +50,7 @@
                 </a>
             </div>
 
-            <div class="col">
+            <div class="container-medium">
                 <a data-bg="Personen" class="horizontal-card" href="#">
                     <h3 class="district">
                         Personen
