--- a/Frontend/documents/documents.html
+++ b/Frontend/documents/documents.html
@@ -80,7 +80,7 @@
             </a>
             <span class="document-name">Irgendeine Liste</span>
             <span class="document-type">.pdf</span>
-            <a class="primary-button delete" href="#">
+            <a class="primary-button delete warning" href="#">
                 <i class="material-icons">clear</i>
                 <p>Dokument löschen</p>
             </a>
