--- a/Frontend/enroll-entity/enroll-entity.html
+++ b/Frontend/enroll-entity/enroll-entity.html
@@ -46,9 +46,9 @@
 <body class="darkmode">
 
     <main>
-        <h1>Starter zum <span class="tournament-name">Tora-Pokal</span> am <span class="tournament-date">21.04.2021</span> anmelden</h1>
+        <h1>Starter zum <span class="tournament-name highlighted-span">Tora-Pokal</span> am <span class="tournament-date highlighted-span">21.04.2021</span> anmelden</h1>
         <div data-table="23hj23b421" class="table-actions clearfix">
-            <a id="add-starter" class="primary-button add-starter">
+            <a class="primary-button add-starter add-entity">
                 <i class="material-icons">add</i>
                 <p>Starter hinzufügen</p>
             </a>
@@ -137,7 +137,7 @@
             <tbody>
                 <tr>
                     <td>
-                        <label class="checkbox-input-container">
+                        <label class="checkbox-input-container select-row">
                             <input type="checkbox" />
                             <span class="checkmark"></span>
                         </label>
@@ -152,7 +152,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <label class="checkbox-input-container">
+                        <label class="checkbox-input-container select-row">
                             <input type="checkbox" />
                             <span class="checkmark"></span>
                         </label>
@@ -167,7 +167,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <label class="checkbox-input-container">
+                        <label class="checkbox-input-container select-row">
                             <input type="checkbox" />
                             <span class="checkmark"></span>
                         </label>
@@ -182,7 +182,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <label class="checkbox-input-container">
+                        <label class="checkbox-input-container select-row">
                             <input type="checkbox" />
                             <span class="checkmark"></span>
                         </label>
@@ -197,7 +197,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <label class="checkbox-input-container">
+                        <label class="checkbox-input-container select-row">
                             <input type="checkbox" />
                             <span class="checkmark"></span>
                         </label>
@@ -212,7 +212,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <label class="checkbox-input-container">
+                        <label class="checkbox-input-container select-row">
                             <input type="checkbox" />
                             <span class="checkmark"></span>
                         </label>
@@ -227,7 +227,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <label class="checkbox-input-container">
+                        <label class="checkbox-input-container select-row">
                             <input type="checkbox" />
                             <span class="checkmark"></span>
                         </label>
@@ -242,7 +242,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <label class="checkbox-input-container">
+                        <label class="checkbox-input-container select-row">
                             <input type="checkbox" />
                             <span class="checkmark"></span>
                         </label>
@@ -257,7 +257,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <label class="checkbox-input-container">
+                        <label class="checkbox-input-container select-row">
                             <input type="checkbox" />
                             <span class="checkmark"></span>
                         </label>
@@ -272,7 +272,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <label class="checkbox-input-container">
+                        <label class="checkbox-input-container select-row">
                             <input type="checkbox" />
                             <span class="checkmark"></span>
                         </label>
@@ -287,7 +287,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <label class="checkbox-input-container">
+                        <label class="checkbox-input-container select-row">
                             <input type="checkbox" />
                             <span class="checkmark"></span>
                         </label>
@@ -302,7 +302,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <label class="checkbox-input-container">
+                        <label class="checkbox-input-container select-row">
                             <input type="checkbox" />
                             <span class="checkmark"></span>
                         </label>
@@ -317,7 +317,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <label class="checkbox-input-container">
+                        <label class="checkbox-input-container select-row">
                             <input type="checkbox" />
                             <span class="checkmark"></span>
                         </label>
@@ -332,7 +332,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <label class="checkbox-input-container">
+                        <label class="checkbox-input-container select-row">
                             <input type="checkbox" />
                             <span class="checkmark"></span>
                         </label>
@@ -347,7 +347,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <label class="checkbox-input-container">
+                        <label class="checkbox-input-container select-row">
                             <input type="checkbox" />
                             <span class="checkmark"></span>
                         </label>
@@ -362,7 +362,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <label class="checkbox-input-container">
+                        <label class="checkbox-input-container select-row">
                             <input type="checkbox" />
                             <span class="checkmark"></span>
                         </label>
@@ -377,7 +377,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <label class="checkbox-input-container">
+                        <label class="checkbox-input-container select-row">
                             <input type="checkbox" />
                             <span class="checkmark"></span>
                         </label>
@@ -392,7 +392,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <label class="checkbox-input-container">
+                        <label class="checkbox-input-container select-row">
                             <input type="checkbox" />
                             <span class="checkmark"></span>
                         </label>
@@ -407,7 +407,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <label class="checkbox-input-container">
+                        <label class="checkbox-input-container select-row">
                             <input type="checkbox" />
                             <span class="checkmark"></span>
                         </label>
@@ -422,7 +422,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <label class="checkbox-input-container">
+                        <label class="checkbox-input-container select-row">
                             <input type="checkbox" />
                             <span class="checkmark"></span>
                         </label>
