--- a/Frontend/fight-place-administration/fight-place-administration.html
+++ b/Frontend/fight-place-administration/fight-place-administration.html
@@ -51,7 +51,7 @@
                 <i class="material-icons">edit</i>
                 <p>Namen ändern</p>
             </a>
-            <a class="primary-button delete">
+            <a class="primary-button delete warning">
                 <i class="material-icons">delete</i>
                 <p>Pool löschen</p>
             </a>
@@ -64,7 +64,7 @@
                 <i class="material-icons">edit</i>
                 <p>Namen ändern</p>
             </a>
-            <a class="primary-button delete">
+            <a class="primary-button delete warning">
                 <i class="material-icons">delete</i>
                 <p>Pool löschen</p>
             </a>
@@ -77,7 +77,7 @@
                 <i class="material-icons">edit</i>
                 <p>Namen ändern</p>
             </a>
-            <a class="primary-button delete">
+            <a class="primary-button delete warning">
                 <i class="material-icons">delete</i>
                 <p>Pool löschen</p>
             </a>
