--- a/Frontend/fighter-tournament-configuration/fighter-tournament-configuration.html
+++ b/Frontend/fighter-tournament-configuration/fighter-tournament-configuration.html
@@ -37,7 +37,7 @@
     -->
 
 </head>
-<body class="darkmode">
+<body class="">
 
     <main class="limited">
         <h1>Kämpfer hinzufügen</h1>
@@ -96,7 +96,7 @@
                 </div>
 
                 <div class="actions">
-                    <a class="primary-button unenroll-fighter red">
+                    <a class="primary-button unenroll-fighter warning">
                         <i class="material-icons">close</i>
                         <p>Kämpfer nicht hinzufügen</p>
                     </a>
@@ -177,7 +177,7 @@
                 </div>
 
                 <div class="actions">
-                    <a class="primary-button unenroll-fighter red">
+                    <a class="primary-button unenroll-fighter warning">
                         <i class="material-icons">close</i>
                         <p>Kämpfer nicht hinzufügen</p>
                     </a>
@@ -257,7 +257,7 @@
                 </div>
 
                 <div class="actions">
-                    <a class="primary-button unenroll-fighter red">
+                    <a class="primary-button unenroll-fighter warning">
                         <i class="material-icons">close</i>
                         <p>Kämpfer nicht hinzufügen</p>
                     </a>
@@ -337,7 +337,7 @@
                 </div>
 
                 <div class="actions">
-                    <a class="primary-button unenroll-fighter red">
+                    <a class="primary-button unenroll-fighter warning">
                         <i class="material-icons">close</i>
                         <p>Kämpfer nicht hinzufügen</p>
                     </a>
