--- a/Frontend/landing-page/landing-page.html
+++ b/Frontend/landing-page/landing-page.html
@@ -37,8 +37,8 @@
 
     <main class="limited clearfix">
 
-        <h2 id="heading">Willkommen auf der <span>Wettkampf</span>-Management Seite vom SV Tora.</h2>
-        <p id="subtext">Hier können Sie Personen und Teams zum <span class="competition">Tora-Pokal</span> am <span class="date">03.03.2021</span> anmelden.</p>
+        <h2 id="heading">Willkommen auf der <span class="highlighted-span">Wettkampf</span>-Management Seite vom SV Tora.</h2>
+        <p id="subtext">Hier können Sie Personen und Teams zum <span class="competition highlighted-span">Tora-Pokal</span> am <span class="date highlighted-span">03.03.2021</span> anmelden.</p>
 
         <a class="enroll" href="#">Jetzt anmelden <i class="material-icons">chevron_right</i></a>
 
