--- a/Frontend/mail/mail.html
+++ b/Frontend/mail/mail.html
@@ -93,7 +93,7 @@
             <i class="material-icons">mail</i>
             <p>Senden</p>
         </a>
-        <a class="primary-button cancel" href="#">
+        <a class="primary-button cancel warning" href="#">
             <i class="material-icons">close</i>
             <p>Abbrechen</p>
         </a>
