--- a/Frontend/messages/messages.html
+++ b/Frontend/messages/messages.html
@@ -15,6 +15,7 @@
 
     <!-- Specific style -->
     <link rel="stylesheet" href="../css/components/notification.css" type="text/css" />
+    <link rel="stylesheet" href="../css/components/message.css" type="text/css" />
     <link rel="stylesheet" href="../css/sites/messages.css" type="text/css" />
 
     <!--[if lt IE 9]>
