--- a/Frontend/split-category/split-category.html
+++ b/Frontend/split-category/split-category.html
@@ -15,6 +15,7 @@
 
     <!-- Specific style -->
     <link rel="stylesheet" href="../css/components/primary-button.css" type="text/css" />
+    <link rel="stylesheet" href="../css/components/modal.css" type="text/css" />
     <link rel="stylesheet" href="../css/sites/split-category.css" type="text/css" />
 
     <!--[if lt IE 9]>
@@ -49,12 +50,12 @@
 
         <div class="commands clearfix">
 
-            <a class="primary-button disabled divide" href="#">
+            <a class="primary-button divide" href="#">
                 <i class="material-icons">done</i>
                 <p>Kategorie teilen!</p>
             </a>
 
-            <a class="primary-button cancel" href="#">
+            <a class="primary-button cancel warning" href="#">
                 <i class="material-icons">close</i>
                 <p>Abbrechen</p>
             </a>
@@ -96,7 +97,7 @@
         <p class="clearfix">Verein: <span class="club">SV Tora</span></p>
     </div>
 
-    <div class="division-commands active">
+    <div class="assigning-commands active">
         <a class="to-left">
             <i class="material-icons">keyboard_arrow_left</i>
         </a>
