--- a/Frontend/tournament-category-administration/tournament-category-administration.html
+++ b/Frontend/tournament-category-administration/tournament-category-administration.html
@@ -53,11 +53,11 @@
                     (<span class="graduation">7. Kyu</span> / <span class="category-age">9-10</span> / <span class="category-sex">m</span> / <span class="count-members">6</span>)
                 </h4>
                 <div class="tools">
-                    <a class="primary-button tool print" href="#">
+                    <a class="primary-button tool print">
                         <i class="material-icons">print</i>
                         <p>Drucken</p>
                     </a>
-                    <a class="primary-button tool edit" href="#">
+                    <a class="primary-button tool edit">
                         <i class="material-icons">create</i>
                         <p>Umbenennen</p>
                     </a>
@@ -65,7 +65,7 @@
                         <i class="material-icons">call_split</i>
                         <p>Splitten</p>
                     </a>
-                    <a class="primary-button tool merge" href="#">
+                    <a class="primary-button tool merge">
                         <i class="material-icons">merge_type</i>
                         <p>Mergen</p>
                     </a>
@@ -133,11 +133,11 @@
                     (<span class="graduation">7. Kyu</span> / <span class="category-age">9-10</span> / <span class="category-sex">m</span> / <span class="count-members">3</span>)
                 </h4>
                 <div class="tools">
-                    <a class="primary-button tool print" href="#">
+                    <a class="primary-button tool print">
                         <i class="material-icons">print</i>
                         <p>Drucken</p>
                     </a>
-                    <a class="primary-button tool edit" href="#">
+                    <a class="primary-button tool edit">
                         <i class="material-icons">create</i>
                         <p>Umbenennen</p>
                     </a>
@@ -145,7 +145,7 @@
                         <i class="material-icons">call_split</i>
                         <p>Splitten</p>
                     </a>
-                    <a class="primary-button tool merge" href="#">
+                    <a class="primary-button tool merge">
                         <i class="material-icons">merge_type</i>
                         <p>Mergen</p>
                     </a>
@@ -189,11 +189,11 @@
                     (<span class="graduation">7. Kyu</span> / <span class="category-age">9-10</span> / <span class="category-sex">m</span> / <span class="count-members">8</span>)
                 </h4>
                 <div class="tools">
-                    <a class="primary-button tool print" href="#">
+                    <a class="primary-button tool print">
                         <i class="material-icons">print</i>
                         <p>Drucken</p>
                     </a>
-                    <a class="primary-button tool edit" href="#">
+                    <a class="primary-button tool edit">
                         <i class="material-icons">create</i>
                         <p>Umbenennen</p>
                     </a>
@@ -201,7 +201,7 @@
                         <i class="material-icons">call_split</i>
                         <p>Splitten</p>
                     </a>
-                    <a class="primary-button tool merge" href="#">
+                    <a class="primary-button tool merge">
                         <i class="material-icons">merge_type</i>
                         <p>Mergen</p>
                     </a>
@@ -285,11 +285,11 @@
                     (<span class="graduation">7. Kyu</span> / <span class="category-age">9-10</span> / <span class="category-sex">m</span> / <span class="count-members">4</span>)
                 </h4>
                 <div class="tools">
-                    <a class="primary-button tool print" href="#">
+                    <a class="primary-button tool print">
                         <i class="material-icons">print</i>
                         <p>Drucken</p>
                     </a>
-                    <a class="primary-button tool edit" href="#">
+                    <a class="primary-button tool edit">
                         <i class="material-icons">create</i>
                         <p>Umbenennen</p>
                     </a>
@@ -297,7 +297,7 @@
                         <i class="material-icons">call_split</i>
                         <p>Splitten</p>
                     </a>
-                    <a class="primary-button tool merge" href="#">
+                    <a class="primary-button tool merge">
                         <i class="material-icons">merge_type</i>
                         <p>Mergen</p>
                     </a>
@@ -349,11 +349,11 @@
                     (<span class="graduation">7. Kyu</span> / <span class="category-age">9-10</span> / <span class="category-sex">m</span> / <span class="count-members">7</span>)
                 </h4>
                 <div class="tools">
-                    <a class="primary-button tool print" href="#">
+                    <a class="primary-button tool print">
                         <i class="material-icons">print</i>
                         <p>Drucken</p>
                     </a>
-                    <a class="primary-button tool edit" href="#">
+                    <a class="primary-button tool edit">
                         <i class="material-icons">create</i>
                         <p>Umbenennen</p>
                     </a>
@@ -361,7 +361,7 @@
                         <i class="material-icons">call_split</i>
                         <p>Splitten</p>
                     </a>
-                    <a class="primary-button tool merge" href="#">
+                    <a class="primary-button tool merge">
                         <i class="material-icons">merge_type</i>
                         <p>Mergen</p>
                     </a>
@@ -437,11 +437,11 @@
                     (<span class="graduation">7. Kyu</span> / <span class="category-age">9-10</span> / <span class="category-sex">m</span> / <span class="count-members">2</span>)
                 </h4>
                 <div class="tools">
-                    <a class="primary-button tool print" href="#">
+                    <a class="primary-button tool print">
                         <i class="material-icons">print</i>
                         <p>Drucken</p>
                     </a>
-                    <a class="primary-button tool edit" href="#">
+                    <a class="primary-button tool edit">
                         <i class="material-icons">create</i>
                         <p>Umbenennen</p>
                     </a>
@@ -449,7 +449,7 @@
                         <i class="material-icons">call_split</i>
                         <p>Splitten</p>
                     </a>
-                    <a class="primary-button tool merge" href="#">
+                    <a class="primary-button tool merge">
                         <i class="material-icons">merge_type</i>
                         <p>Mergen</p>
                     </a>
@@ -489,11 +489,11 @@
                     (<span class="graduation">7. Kyu</span> / <span class="category-age">9-10</span> / <span class="category-sex">m</span> / <span class="count-members">8</span>)
                 </h4>
                 <div class="tools">
-                    <a class="primary-button tool print" href="#">
+                    <a class="primary-button tool print">
                         <i class="material-icons">print</i>
                         <p>Drucken</p>
                     </a>
-                    <a class="primary-button tool edit" href="#">
+                    <a class="primary-button tool edit">
                         <i class="material-icons">create</i>
                         <p>Umbenennen</p>
                     </a>
@@ -501,7 +501,7 @@
                         <i class="material-icons">call_split</i>
                         <p>Splitten</p>
                     </a>
-                    <a class="primary-button tool merge" href="#">
+                    <a class="primary-button tool merge">
                         <i class="material-icons">merge_type</i>
                         <p>Mergen</p>
                     </a>
@@ -585,11 +585,11 @@
                     (<span class="graduation">7. Kyu</span> / <span class="category-age">9-10</span> / <span class="category-sex">m</span> / <span class="count-members">8</span>)
                 </h4>
                 <div class="tools">
-                    <a class="primary-button tool print" href="#">
+                    <a class="primary-button tool print">
                         <i class="material-icons">print</i>
                         <p>Drucken</p>
                     </a>
-                    <a class="primary-button tool edit" href="#">
+                    <a class="primary-button tool edit">
                         <i class="material-icons">create</i>
                         <p>Umbenennen</p>
                     </a>
@@ -597,7 +597,7 @@
                         <i class="material-icons">call_split</i>
                         <p>Splitten</p>
                     </a>
-                    <a class="primary-button tool merge" href="#">
+                    <a class="primary-button tool merge">
                         <i class="material-icons">merge_type</i>
                         <p>Mergen</p>
                     </a>
@@ -681,11 +681,11 @@
                     (<span class="graduation">7. Kyu</span> / <span class="category-age">9-10</span> / <span class="category-sex">m</span> / <span class="count-members">3</span>)
                 </h4>
                 <div class="tools">
-                    <a class="primary-button tool print" href="#">
+                    <a class="primary-button tool print">
                         <i class="material-icons">print</i>
                         <p>Drucken</p>
                     </a>
-                    <a class="primary-button tool edit" href="#">
+                    <a class="primary-button tool edit">
                         <i class="material-icons">create</i>
                         <p>Umbenennen</p>
                     </a>
@@ -693,7 +693,7 @@
                         <i class="material-icons">call_split</i>
                         <p>Splitten</p>
                     </a>
-                    <a class="primary-button tool merge" href="#">
+                    <a class="primary-button tool merge">
                         <i class="material-icons">merge_type</i>
                         <p>Mergen</p>
                     </a>
@@ -737,11 +737,11 @@
                     (<span class="graduation">7. Kyu</span> / <span class="category-age">9-10</span> / <span class="category-sex">m</span> / <span class="count-members">2</span>)
                 </h4>
                 <div class="tools">
-                    <a class="primary-button tool print" href="#">
+                    <a class="primary-button tool print">
                         <i class="material-icons">print</i>
                         <p>Drucken</p>
                     </a>
-                    <a class="primary-button tool edit" href="#">
+                    <a class="primary-button tool edit">
                         <i class="material-icons">create</i>
                         <p>Umbenennen</p>
                     </a>
@@ -749,7 +749,7 @@
                         <i class="material-icons">call_split</i>
                         <p>Splitten</p>
                     </a>
-                    <a class="primary-button tool merge" href="#">
+                    <a class="primary-button tool merge">
                         <i class="material-icons">merge_type</i>
                         <p>Mergen</p>
                     </a>
@@ -773,6 +773,7 @@
                         <td class="graduation">1.Kyu</td>
                         <td class="club">SV Tora</td>
                     </tr>
+                </table>
             </div>
         </div>
     </div>
