--- a/Frontend/tournament-dashboard/tournament-dashboard.html
+++ b/Frontend/tournament-dashboard/tournament-dashboard.html
@@ -43,7 +43,7 @@
 
     <main class="no-tournament">
         <h1>Zur Zeit findet kein Wettkampf statt.</h1>
-        <a class="host-tournament">
+        <a class="host-tournament tilt">
             <i class="material-icons">add</i>
             <p>Wettkampf veranstalten</p>
         </a>
@@ -146,7 +146,7 @@
                         <p>Zeitplan managen</p>
                     </a>
                 </div>
-                <a class="primary-button red cancel-tournament">
+                <a class="primary-button warning cancel-tournament">
                     <i class="material-icons">close</i>
                     <p>Wettkampf absagen</p>
                 </a>
