--- a/Frontend/tournament-time-schedule/tournament-time-schedule.html
+++ b/Frontend/tournament-time-schedule/tournament-time-schedule.html
@@ -45,7 +45,7 @@
         <h1>Wettkampf Zeitplan</h1>
         <p>Falls du Parameter bezüglich der Wettkämpfe (z.B. die Standardlänge eines einzelnen Kampfes) einstellen willst, dann findest du das in den <a class="link" href="#">Einstellungen</a>.</p>
 
-        <div class="scroll-container">
+        <div class="oversize-container">
             <div class="time-container">
                 <div class="time-scale">
                     <div class="hour full">
@@ -89,11 +89,11 @@
         </div>
 
         <div class="time-actions">
-            <a class="primary-button back">
+            <a class="primary-button back" href="">
                 <i class="material-icons">backspace</i>
                 <p>Zum Dashboard</p>
             </a>
-            <a class="primary-button reset red">
+            <a class="primary-button reset warning">
                 <i class="material-icons">restore</i>
                 <p>Zurücksetzen</p>
             </a>
