--- a/Frontend/admin-registration/admin-registration.html
+++ b/Frontend/admin-registration/admin-registration.html
@@ -6,7 +6,7 @@
     <meta name="keywords" content="" />
     <meta name="description" content="" />
 
-    <title>Administration</title>
+    <title>Admin Registration</title>
 
     <!-- General styles and fonts and stuff like that -->
     <link rel="stylesheet" href="../css/normalize.css" type="text/css" />
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="../css/components/material-inputs.css" type="text/css" />
     <link rel="stylesheet" href="../css/components/theater.css" type="text/css" />
     <link rel="stylesheet" href="../css/components/loader.css" type="text/css" />
+    <link rel="stylesheet" href="../css/components/login-registration-form.css" type="text/css" />
     <link rel="stylesheet" href="../css/sites/admin-registration.css" type="text/css" />
 
     <!--[if lt IE 9]>
@@ -40,7 +41,7 @@
 <body class="darkmode">
 
     <main class="limited">
-        <h1 class="introduction"><span class="part1">Herzlich willkommen <span class="invited-mail">neuer.admin@mail.de</span>!</span><span class="part2"><br /> Du wurdest eingeladen, im SV-Tora Wettkampf Management System als Administrator teilzunehmen. Bitte schließe deine Registrierung hier ab. Danach steht dir direkt das Dashboard zur Verfügung.</span></h1>
+        <h1 class="introduction"><span class="part1">Herzlich willkommen <span class="invited-mail highlighted-span">neuer.admin@mail.de</span>!</span><span class="part2"><br /> Du wurdest eingeladen, im SV-Tora Wettkampf Management System als Administrator teilzunehmen. Bitte schließe deine Registrierung hier ab. Danach steht dir direkt das Dashboard zur Verfügung.</span></h1>
         <div class="registration-container small">
             <h1>Registrieren</h1>
             <form class="registration clearfix" action="" method="post">
