--- a/Frontend/administration/administration.html
+++ b/Frontend/administration/administration.html
@@ -15,7 +15,10 @@
 
     <!-- Specific style -->
     <link rel="stylesheet" href="../css/components/primary-button.css" type="text/css" />
+    <link rel="stylesheet" href="../css/components/secondary-button.css" type="text/css" />
     <link rel="stylesheet" href="../css/components/material-inputs.css" type="text/css" />
+    <link rel="stylesheet" href="../css/components/modal.css" type="text/css" />
+    <link rel="stylesheet" href="../css/components/table-actions-container.css" type="text/css" />
     <link rel="stylesheet" href="../css/sites/administration.css" type="text/css" />
 
     <!--[if lt IE 9]>
@@ -39,14 +42,14 @@
 
     <main>
         <h1>Administratoren</h1>
-        <div class="actions clearfix">
-            <a id="add-admin" class="primary-button add-admin" href="#">
+        <div data-admin-table="32kj2345gkjh" class="table-actions clearfix">
+            <a class="primary-button add-admin add-entity">
                 <i class="material-icons">add</i>
                 <p>Admin hinzufügen</p>
             </a>
         </div>
         <div class="oversize-container">
-            <table data-add="add-admin" class="admin-table space-after">
+            <table id="32kj2345gkjh" class="admin-table space-after">
                 <thead>
                     <tr>
                         <th class="not-visible">
@@ -86,7 +89,7 @@
                                 <i class="material-icons">create</i>
                                 <p>Bearbeiten</p>
                             </a>
-                            <a class="primary-button delete" href="#">
+                            <a class="primary-button delete warning" href="#">
                                 <i class="material-icons">delete</i>
                                 <p>Löschen</p>
                             </a>
@@ -113,7 +116,7 @@
                                 <i class="material-icons">create</i>
                                 <p>Bearbeiten</p>
                             </a>
-                            <a class="primary-button delete" href="#">
+                            <a class="primary-button delete warning" href="#">
                                 <i class="material-icons">delete</i>
                                 <p>Löschen</p>
                             </a>
@@ -140,7 +143,7 @@
                                 <i class="material-icons">create</i>
                                 <p>Bearbeiten</p>
                             </a>
-                            <a class="primary-button delete" href="#">
+                            <a class="primary-button delete warning" href="#">
                                 <i class="material-icons">delete</i>
                                 <p>Löschen</p>
                             </a>
