--- a/Frontend/category-fighting-system/category-fighting-system.html
+++ b/Frontend/category-fighting-system/category-fighting-system.html
@@ -43,7 +43,7 @@
 
 <main class="limited">
     <h1 class="starter-team">Starter</h1>
-    <h3>Kata</h3>
+    <h3 class="subheading">Kata</h3>
     <div class="accordion">
         <div class="accordion-bar prepared">
             <div class="bar-header clearfix">
@@ -211,7 +211,7 @@
         </div>
     </div>
 
-    <h3>Kumite</h3>
+    <h3 class="subheading">Kumite</h3>
     <div class="accordion">
         <div class="accordion-bar">
             <div class="bar-header clearfix">
