Competition mode progress and time schedule module

--- a/Frontend/category-fighting-system/category-fighting-system.html
+++ b/Frontend/category-fighting-system/category-fighting-system.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="../css/components/modal.css" type="text/css" />
     <link rel="stylesheet" href="../css/components/accordion.css" type="text/css" />
     <link rel="stylesheet" href="../css/components/carousel.css" type="text/css" />
+    <link rel="stylesheet" href="../css/components/fighting-systems.css" type="text/css" />
     <link rel="stylesheet" href="../css/sites/category-fighting-system.css" type="text/css" />
 
     <!--[if lt IE 9]>
