--- a/Frontend/fighter-tournament-configuration/fighter-tournament-configuration.html
+++ b/Frontend/fighter-tournament-configuration/fighter-tournament-configuration.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="../css/components/primary-button.css" type="text/css" />
     <link rel="stylesheet" href="../css/components/secondary-button.css" type="text/css" />
     <link rel="stylesheet" href="../css/components/modal.css" type="text/css" />
+    <link rel="stylesheet" href="../css/components/property-information.css" type="text/css" />
     <link rel="stylesheet" href="../css/sites/fighter-tournament-configuration.css" type="text/css" />
 
     <!--[if lt IE 9]>
@@ -37,7 +38,7 @@
     -->
 
 </head>
-<body class="">
+<body class="darkmode">
 
     <main class="limited">
         <h1>Kämpfer hinzufügen</h1>
@@ -46,7 +47,7 @@
             <div class="fighter-card">
                 <h2 class="fighter-name"><span class="first-name">Marcus</span> <span class="family-name">Popopov</span></h2>
 
-                <div class="info">
+                <div class="property-information">
                     <p data-property="Alter">21 Jahre</p>
                     <p data-property="Geschlecht">Männlich</p>
                     <p data-property="Graduierung">6. Dan</p>
