--- a/Frontend/fighting-system-map/fighting-system-map.html
+++ b/Frontend/fighting-system-map/fighting-system-map.html
@@ -94,7 +94,7 @@
             <div class="tree clearfix">
                 <div class="column">
                     <div class="fight">
-                        <span class="fighter-name">Marcus</span>
+                        <span class="fighter-name fighter1">Marcus</span>
                         <span class="fighter-name">Markus</span>
                         <span class="fight-number">1</span>
                     </div>
