--- a/Frontend/tournament-time-schedule/tournament-time-schedule.html
+++ b/Frontend/tournament-time-schedule/tournament-time-schedule.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="../css/components/modal.css" type="text/css" />
     <link rel="stylesheet" href="../css/components/svg-arrow.css" type="text/css" />
     <link rel="stylesheet" href="../css/components/tippy.css" type="text/css" />
+    <link rel="stylesheet" href="../css/components/tooltip.css" type="text/css" />
     <link rel="stylesheet" href="../css/sites/tournament-time-schedule.css" type="text/css" />
 
     <!--[if lt IE 9]>
